[project]
name = "sunset-visibility"
version = "1.0.0"
description = "Check if sunset will be visible over the ocean from any beach on Earth"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
keywords = ["sunset", "beach", "ocean", "visibility", "solar", "openstreetmap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = []  # No external dependencies - uses standard library only

[project.scripts]
sunset-check = "sunset_check:main"

[project.urls]
Repository = "https://github.com/earino/sunset-visibility"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["sunset_check", "sunset_visibility", "coastline_analyzer"]
